...
        let icon: String
        let title: String
        let tag: Int
    }

    private let items: [Item] = [
        Item(icon: "sportscourt.fill", title: "Play", tag: 0),
        Item(icon: "rectangle.grid.2x2.fill", title: "Dashboard", tag: 1),
        Item(icon: "trophy.fill", title: "Tourney", tag: 2),
        Item(icon: "person.2.fill", title: "Friends", tag: 3),
        Item(icon: "person.crop.circle.fill", title: "Profile", tag: 4)
    ]

...
